<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.create_book.CreateBookActivity"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_book"
                android:textSize="36sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:textSize="14sp"
                android:layout_marginTop="50dp"
                />

            <EditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_description"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/book_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_item"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/total_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supplier"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_date"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>